@@ -73,7 +73,7 @@ class ZMProductReviewsController extends ZMController {
         $product = $zm_products->getProductForId($zm_request->getProductId());
         $this->exportGlobal("zm_product", $product);
 
-        $resultList = new ZMResultList($zm_reviews->getReviewsForProductId($product->getId()));
+        $resultList = $this->create("ResultList", $zm_reviews->getReviewsForProductId($product->getId()));
         $this->exportGlobal("zm_resultList", $resultList);
 
         return $this->findView();
