@@ -2,6 +2,7 @@ Release 0.8.7
 - move cache manager page from core to zm_page_cache plugin
 - added ZMShoppingCartItem::getProduct()
 - make zm_catalog_tree support displaying products
+- use create(..) rather than new to create new ResultList instances
 
 Release 0.8.6.1
 - fix hardcoded tablename in ZMBanners; #1856664
